Projects/Lab_06/src/parser/y.output
   0  $accept : program $end

   1  program : opt_def_glob_var main

   2  glob_def : var_def
   3           | struct_def
   4           | func_def

   5  opt_def_glob_var : opt_def_glob_var glob_def
   6                   |

   7  var_def : p_type list_ident ';'
   8          | array list_ident ';'

   9  local_var_def : var_def
  10                | struct_def

  11  opt_list_local_var : opt_list_local_var local_var_def
  12                     |

  13  opt_list_fields : opt_list_fields type list_ident ';'
  14                  |

  15  struct_def : STRUCT '{' opt_list_fields '}' list_ident ';'

  16  main : VOID MAIN '(' ')' '{' opt_list_local_var statements '}'

  17  func_def : p_type ID '(' opt_list_param ')' '{' opt_list_local_var statements '}'
  18           | VOID ID '(' opt_list_param ')' '{' opt_list_local_var statements '}'

  19  list_param : list_param ',' p_type ID
  20             | p_type ID

  21  opt_list_param : list_param
  22                 |

  23  p_type : INT
  24         | DOUBLE
  25         | CHAR

  26  array : type '[' INT_CONSTANT ']'

  27  type : p_type
  28       | array

  29  list_ident : list_ident ',' ID
  30             | ID

  31  statements : statements statement
  32             |

  33  statement : RETURN exp ';'
  34            | READ list_exp ';'
  35            | WRITE list_exp ';'
  36            | if_else
  37            | while
  38            | exp '=' exp ';'
  39            | ID '(' opt_list_exp ')' ';'
  40            | exp INC ';'
  41            | exp DEC ';'

  42  while : WHILE '(' exp ')' '{' statements '}'
  43        | WHILE '(' exp ')' statement

  44  if_else : IF '(' exp ')' '{' statements '}' ELSE '{' statements '}'
  45          | IF '(' exp ')' '{' statements '}' ELSE statement
  46          | IF '(' exp ')' statement ELSE '{' statements '}'
  47          | IF '(' exp ')' statement ELSE statement
  48          | IF '(' exp ')' '{' statements '}'
  49          | IF '(' exp ')' statement

  50  opt_list_exp : list_exp
  51               |

  52  list_exp : list_exp ',' exp
  53           | exp

  54  exp : exp '+' exp
  55      | exp '*' exp
  56      | exp '/' exp
  57      | exp '-' exp
  58      | exp '%' exp
  59      | exp EQ exp
  60      | exp NOT_EQ exp
  61      | exp '>' exp
  62      | exp '<' exp
  63      | exp L_EQ exp
  64      | exp G_EQ exp
  65      | exp AND exp
  66      | exp OR exp
  67      | '(' p_type ')' exp
  68      | exp '[' exp ']'
  69      | exp '.' ID
  70      | ID '(' opt_list_exp ')'
  71      | '-' exp
  72      | '(' exp ')'
  73      | '!' exp
  74      | INT_CONSTANT
  75      | ID
  76      | CHAR_CONSTANT
  77      | REAL_CONSTANT

state 0
	$accept : . program $end  (0)
	opt_def_glob_var : .  (6)

	.  reduce 6

	program  goto 1
	opt_def_glob_var  goto 2


state 1
	$accept : program . $end  (0)

	$end  accept


state 2
	program : opt_def_glob_var . main  (1)
	opt_def_glob_var : opt_def_glob_var . glob_def  (5)

	VOID  shift 3
	DOUBLE  shift 4
	CHAR  shift 5
	STRUCT  shift 6
	INT  shift 7
	.  error

	main  goto 8
	glob_def  goto 9
	var_def  goto 10
	struct_def  goto 11
	func_def  goto 12
	p_type  goto 13
	array  goto 14
	type  goto 15


state 3
	main : VOID . MAIN '(' ')' '{' opt_list_local_var statements '}'  (16)
	func_def : VOID . ID '(' opt_list_param ')' '{' opt_list_local_var statements '}'  (18)

	ID  shift 16
	MAIN  shift 17
	.  error


state 4
	p_type : DOUBLE .  (24)

	.  reduce 24


state 5
	p_type : CHAR .  (25)

	.  reduce 25


state 6
	struct_def : STRUCT . '{' opt_list_fields '}' list_ident ';'  (15)

	'{'  shift 18
	.  error


state 7
	p_type : INT .  (23)

	.  reduce 23


state 8
	program : opt_def_glob_var main .  (1)

	.  reduce 1


state 9
	opt_def_glob_var : opt_def_glob_var glob_def .  (5)

	.  reduce 5


state 10
	glob_def : var_def .  (2)

	.  reduce 2


state 11
	glob_def : struct_def .  (3)

	.  reduce 3


state 12
	glob_def : func_def .  (4)

	.  reduce 4


state 13
	var_def : p_type . list_ident ';'  (7)
	func_def : p_type . ID '(' opt_list_param ')' '{' opt_list_local_var statements '}'  (17)
	type : p_type .  (27)

	ID  shift 19
	'['  reduce 27

	list_ident  goto 20


state 14
	var_def : array . list_ident ';'  (8)
	type : array .  (28)

	ID  shift 21
	'['  reduce 28

	list_ident  goto 22


state 15
	array : type . '[' INT_CONSTANT ']'  (26)

	'['  shift 23
	.  error


state 16
	func_def : VOID ID . '(' opt_list_param ')' '{' opt_list_local_var statements '}'  (18)

	'('  shift 24
	.  error


state 17
	main : VOID MAIN . '(' ')' '{' opt_list_local_var statements '}'  (16)

	'('  shift 25
	.  error


state 18
	struct_def : STRUCT '{' . opt_list_fields '}' list_ident ';'  (15)
	opt_list_fields : .  (14)

	.  reduce 14

	opt_list_fields  goto 26


state 19
	func_def : p_type ID . '(' opt_list_param ')' '{' opt_list_local_var statements '}'  (17)
	list_ident : ID .  (30)

	'('  shift 27
	';'  reduce 30
	','  reduce 30


state 20
	var_def : p_type list_ident . ';'  (7)
	list_ident : list_ident . ',' ID  (29)

	';'  shift 28
	','  shift 29
	.  error


state 21
	list_ident : ID .  (30)

	.  reduce 30


state 22
	var_def : array list_ident . ';'  (8)
	list_ident : list_ident . ',' ID  (29)

	';'  shift 30
	','  shift 29
	.  error


state 23
	array : type '[' . INT_CONSTANT ']'  (26)

	INT_CONSTANT  shift 31
	.  error


state 24
	func_def : VOID ID '(' . opt_list_param ')' '{' opt_list_local_var statements '}'  (18)
	opt_list_param : .  (22)

	DOUBLE  shift 4
	CHAR  shift 5
	INT  shift 7
	')'  reduce 22

	p_type  goto 32
	opt_list_param  goto 33
	list_param  goto 34


state 25
	main : VOID MAIN '(' . ')' '{' opt_list_local_var statements '}'  (16)

	')'  shift 35
	.  error


state 26
	opt_list_fields : opt_list_fields . type list_ident ';'  (13)
	struct_def : STRUCT '{' opt_list_fields . '}' list_ident ';'  (15)

	DOUBLE  shift 4
	CHAR  shift 5
	INT  shift 7
	'}'  shift 36
	.  error

	p_type  goto 37
	array  goto 38
	type  goto 39


state 27
	func_def : p_type ID '(' . opt_list_param ')' '{' opt_list_local_var statements '}'  (17)
	opt_list_param : .  (22)

	DOUBLE  shift 4
	CHAR  shift 5
	INT  shift 7
	')'  reduce 22

	p_type  goto 32
	opt_list_param  goto 40
	list_param  goto 34


state 28
	var_def : p_type list_ident ';' .  (7)

	.  reduce 7


state 29
	list_ident : list_ident ',' . ID  (29)

	ID  shift 41
	.  error


state 30
	var_def : array list_ident ';' .  (8)

	.  reduce 8


state 31
	array : type '[' INT_CONSTANT . ']'  (26)

	']'  shift 42
	.  error


state 32
	list_param : p_type . ID  (20)

	ID  shift 43
	.  error


state 33
	func_def : VOID ID '(' opt_list_param . ')' '{' opt_list_local_var statements '}'  (18)

	')'  shift 44
	.  error


state 34
	list_param : list_param . ',' p_type ID  (19)
	opt_list_param : list_param .  (21)

	','  shift 45
	')'  reduce 21


state 35
	main : VOID MAIN '(' ')' . '{' opt_list_local_var statements '}'  (16)

	'{'  shift 46
	.  error


state 36
	struct_def : STRUCT '{' opt_list_fields '}' . list_ident ';'  (15)

	ID  shift 21
	.  error

	list_ident  goto 47


state 37
	type : p_type .  (27)

	.  reduce 27


state 38
	type : array .  (28)

	.  reduce 28


state 39
	opt_list_fields : opt_list_fields type . list_ident ';'  (13)
	array : type . '[' INT_CONSTANT ']'  (26)

	ID  shift 21
	'['  shift 23
	.  error

	list_ident  goto 48


state 40
	func_def : p_type ID '(' opt_list_param . ')' '{' opt_list_local_var statements '}'  (17)

	')'  shift 49
	.  error


state 41
	list_ident : list_ident ',' ID .  (29)

	.  reduce 29


state 42
	array : type '[' INT_CONSTANT ']' .  (26)

	.  reduce 26


state 43
	list_param : p_type ID .  (20)

	.  reduce 20


state 44
	func_def : VOID ID '(' opt_list_param ')' . '{' opt_list_local_var statements '}'  (18)

	'{'  shift 50
	.  error


state 45
	list_param : list_param ',' . p_type ID  (19)

	DOUBLE  shift 4
	CHAR  shift 5
	INT  shift 7
	.  error

	p_type  goto 51


state 46
	main : VOID MAIN '(' ')' '{' . opt_list_local_var statements '}'  (16)
	opt_list_local_var : .  (12)

	.  reduce 12

	opt_list_local_var  goto 52


state 47
	struct_def : STRUCT '{' opt_list_fields '}' list_ident . ';'  (15)
	list_ident : list_ident . ',' ID  (29)

	';'  shift 53
	','  shift 29
	.  error


state 48
	opt_list_fields : opt_list_fields type list_ident . ';'  (13)
	list_ident : list_ident . ',' ID  (29)

	';'  shift 54
	','  shift 29
	.  error


state 49
	func_def : p_type ID '(' opt_list_param ')' . '{' opt_list_local_var statements '}'  (17)

	'{'  shift 55
	.  error


state 50
	func_def : VOID ID '(' opt_list_param ')' '{' . opt_list_local_var statements '}'  (18)
	opt_list_local_var : .  (12)

	.  reduce 12

	opt_list_local_var  goto 56


state 51
	list_param : list_param ',' p_type . ID  (19)

	ID  shift 57
	.  error


state 52
	opt_list_local_var : opt_list_local_var . local_var_def  (11)
	main : VOID MAIN '(' ')' '{' opt_list_local_var . statements '}'  (16)
	statements : .  (32)

	DOUBLE  shift 4
	CHAR  shift 5
	STRUCT  shift 6
	INT  shift 7
	INT_CONSTANT  reduce 32
	REAL_CONSTANT  reduce 32
	RETURN  reduce 32
	ID  reduce 32
	WRITE  reduce 32
	IF  reduce 32
	READ  reduce 32
	WHILE  reduce 32
	CHAR_CONSTANT  reduce 32
	'!'  reduce 32
	'-'  reduce 32
	'('  reduce 32
	'}'  reduce 32

	var_def  goto 58
	struct_def  goto 59
	p_type  goto 60
	array  goto 14
	local_var_def  goto 61
	type  goto 15
	statements  goto 62


state 53
	struct_def : STRUCT '{' opt_list_fields '}' list_ident ';' .  (15)

	.  reduce 15


state 54
	opt_list_fields : opt_list_fields type list_ident ';' .  (13)

	.  reduce 13


state 55
	func_def : p_type ID '(' opt_list_param ')' '{' . opt_list_local_var statements '}'  (17)
	opt_list_local_var : .  (12)

	.  reduce 12

	opt_list_local_var  goto 63


state 56
	opt_list_local_var : opt_list_local_var . local_var_def  (11)
	func_def : VOID ID '(' opt_list_param ')' '{' opt_list_local_var . statements '}'  (18)
	statements : .  (32)

	DOUBLE  shift 4
	CHAR  shift 5
	STRUCT  shift 6
	INT  shift 7
	INT_CONSTANT  reduce 32
	REAL_CONSTANT  reduce 32
	RETURN  reduce 32
	ID  reduce 32
	WRITE  reduce 32
	IF  reduce 32
	READ  reduce 32
	WHILE  reduce 32
	CHAR_CONSTANT  reduce 32
	'!'  reduce 32
	'-'  reduce 32
	'('  reduce 32
	'}'  reduce 32

	var_def  goto 58
	struct_def  goto 59
	p_type  goto 60
	array  goto 14
	local_var_def  goto 61
	type  goto 15
	statements  goto 64


state 57
	list_param : list_param ',' p_type ID .  (19)

	.  reduce 19


state 58
	local_var_def : var_def .  (9)

	.  reduce 9


state 59
	local_var_def : struct_def .  (10)

	.  reduce 10


state 60
	var_def : p_type . list_ident ';'  (7)
	type : p_type .  (27)

	ID  shift 21
	'['  reduce 27

	list_ident  goto 20


state 61
	opt_list_local_var : opt_list_local_var local_var_def .  (11)

	.  reduce 11


state 62
	main : VOID MAIN '(' ')' '{' opt_list_local_var statements . '}'  (16)
	statements : statements . statement  (31)

	INT_CONSTANT  shift 65
	REAL_CONSTANT  shift 66
	RETURN  shift 67
	ID  shift 68
	WRITE  shift 69
	IF  shift 70
	READ  shift 71
	WHILE  shift 72
	CHAR_CONSTANT  shift 73
	'!'  shift 74
	'-'  shift 75
	'('  shift 76
	'}'  shift 77
	.  error

	statement  goto 78
	exp  goto 79
	if_else  goto 80
	while  goto 81


state 63
	opt_list_local_var : opt_list_local_var . local_var_def  (11)
	func_def : p_type ID '(' opt_list_param ')' '{' opt_list_local_var . statements '}'  (17)
	statements : .  (32)

	DOUBLE  shift 4
	CHAR  shift 5
	STRUCT  shift 6
	INT  shift 7
	INT_CONSTANT  reduce 32
	REAL_CONSTANT  reduce 32
	RETURN  reduce 32
	ID  reduce 32
	WRITE  reduce 32
	IF  reduce 32
	READ  reduce 32
	WHILE  reduce 32
	CHAR_CONSTANT  reduce 32
	'!'  reduce 32
	'-'  reduce 32
	'('  reduce 32
	'}'  reduce 32

	var_def  goto 58
	struct_def  goto 59
	p_type  goto 60
	array  goto 14
	local_var_def  goto 61
	type  goto 15
	statements  goto 82


state 64
	func_def : VOID ID '(' opt_list_param ')' '{' opt_list_local_var statements . '}'  (18)
	statements : statements . statement  (31)

	INT_CONSTANT  shift 65
	REAL_CONSTANT  shift 66
	RETURN  shift 67
	ID  shift 68
	WRITE  shift 69
	IF  shift 70
	READ  shift 71
	WHILE  shift 72
	CHAR_CONSTANT  shift 73
	'!'  shift 74
	'-'  shift 75
	'('  shift 76
	'}'  shift 83
	.  error

	statement  goto 78
	exp  goto 79
	if_else  goto 80
	while  goto 81


state 65
	exp : INT_CONSTANT .  (74)

	.  reduce 74


state 66
	exp : REAL_CONSTANT .  (77)

	.  reduce 77


state 67
	statement : RETURN . exp ';'  (33)

	INT_CONSTANT  shift 65
	REAL_CONSTANT  shift 66
	ID  shift 84
	CHAR_CONSTANT  shift 73
	'!'  shift 74
	'-'  shift 75
	'('  shift 76
	.  error

	exp  goto 85


state 68
	statement : ID . '(' opt_list_exp ')' ';'  (39)
	exp : ID . '(' opt_list_exp ')'  (70)
	exp : ID .  (75)

	'('  shift 86
	EQ  reduce 75
	OR  reduce 75
	AND  reduce 75
	NOT_EQ  reduce 75
	G_EQ  reduce 75
	L_EQ  reduce 75
	INC  reduce 75
	DEC  reduce 75
	'='  reduce 75
	'>'  reduce 75
	'<'  reduce 75
	'+'  reduce 75
	'-'  reduce 75
	'*'  reduce 75
	'/'  reduce 75
	'%'  reduce 75
	'['  reduce 75
	'.'  reduce 75


state 69
	statement : WRITE . list_exp ';'  (35)

	INT_CONSTANT  shift 65
	REAL_CONSTANT  shift 66
	ID  shift 84
	CHAR_CONSTANT  shift 73
	'!'  shift 74
	'-'  shift 75
	'('  shift 76
	.  error

	exp  goto 87
	list_exp  goto 88


state 70
	if_else : IF . '(' exp ')' '{' statements '}' ELSE '{' statements '}'  (44)
	if_else : IF . '(' exp ')' '{' statements '}' ELSE statement  (45)
	if_else : IF . '(' exp ')' statement ELSE '{' statements '}'  (46)
	if_else : IF . '(' exp ')' statement ELSE statement  (47)
	if_else : IF . '(' exp ')' '{' statements '}'  (48)
	if_else : IF . '(' exp ')' statement  (49)

	'('  shift 89
	.  error


state 71
	statement : READ . list_exp ';'  (34)

	INT_CONSTANT  shift 65
	REAL_CONSTANT  shift 66
	ID  shift 84
	CHAR_CONSTANT  shift 73
	'!'  shift 74
	'-'  shift 75
	'('  shift 76
	.  error

	exp  goto 87
	list_exp  goto 90


state 72
	while : WHILE . '(' exp ')' '{' statements '}'  (42)
	while : WHILE . '(' exp ')' statement  (43)

	'('  shift 91
	.  error


state 73
	exp : CHAR_CONSTANT .  (76)

	.  reduce 76


state 74
	exp : '!' . exp  (73)

	INT_CONSTANT  shift 65
	REAL_CONSTANT  shift 66
	ID  shift 84
	CHAR_CONSTANT  shift 73
	'!'  shift 74
	'-'  shift 75
	'('  shift 76
	.  error

	exp  goto 92


state 75
	exp : '-' . exp  (71)

	INT_CONSTANT  shift 65
	REAL_CONSTANT  shift 66
	ID  shift 84
	CHAR_CONSTANT  shift 73
	'!'  shift 74
	'-'  shift 75
	'('  shift 76
	.  error

	exp  goto 93


state 76
	exp : '(' . p_type ')' exp  (67)
	exp : '(' . exp ')'  (72)

	INT_CONSTANT  shift 65
	REAL_CONSTANT  shift 66
	ID  shift 84
	DOUBLE  shift 4
	CHAR  shift 5
	INT  shift 7
	CHAR_CONSTANT  shift 73
	'!'  shift 74
	'-'  shift 75
	'('  shift 76
	.  error

	p_type  goto 94
	exp  goto 95


state 77
	main : VOID MAIN '(' ')' '{' opt_list_local_var statements '}' .  (16)

	.  reduce 16


state 78
	statements : statements statement .  (31)

	.  reduce 31


state 79
	statement : exp . '=' exp ';'  (38)
	statement : exp . INC ';'  (40)
	statement : exp . DEC ';'  (41)
	exp : exp . '+' exp  (54)
	exp : exp . '*' exp  (55)
	exp : exp . '/' exp  (56)
	exp : exp . '-' exp  (57)
	exp : exp . '%' exp  (58)
	exp : exp . EQ exp  (59)
	exp : exp . NOT_EQ exp  (60)
	exp : exp . '>' exp  (61)
	exp : exp . '<' exp  (62)
	exp : exp . L_EQ exp  (63)
	exp : exp . G_EQ exp  (64)
	exp : exp . AND exp  (65)
	exp : exp . OR exp  (66)
	exp : exp . '[' exp ']'  (68)
	exp : exp . '.' ID  (69)

	EQ  shift 96
	OR  shift 97
	AND  shift 98
	NOT_EQ  shift 99
	G_EQ  shift 100
	L_EQ  shift 101
	INC  shift 102
	DEC  shift 103
	'='  shift 104
	'>'  shift 105
	'<'  shift 106
	'+'  shift 107
	'-'  shift 108
	'*'  shift 109
	'/'  shift 110
	'%'  shift 111
	'['  shift 112
	'.'  shift 113
	.  error


state 80
	statement : if_else .  (36)

	.  reduce 36


state 81
	statement : while .  (37)

	.  reduce 37


state 82
	func_def : p_type ID '(' opt_list_param ')' '{' opt_list_local_var statements . '}'  (17)
	statements : statements . statement  (31)

	INT_CONSTANT  shift 65
	REAL_CONSTANT  shift 66
	RETURN  shift 67
	ID  shift 68
	WRITE  shift 69
	IF  shift 70
	READ  shift 71
	WHILE  shift 72
	CHAR_CONSTANT  shift 73
	'!'  shift 74
	'-'  shift 75
	'('  shift 76
	'}'  shift 114
	.  error

	statement  goto 78
	exp  goto 79
	if_else  goto 80
	while  goto 81


state 83
	func_def : VOID ID '(' opt_list_param ')' '{' opt_list_local_var statements '}' .  (18)

	.  reduce 18


state 84
	exp : ID . '(' opt_list_exp ')'  (70)
	exp : ID .  (75)

	'('  shift 115
	EQ  reduce 75
	OR  reduce 75
	AND  reduce 75
	NOT_EQ  reduce 75
	G_EQ  reduce 75
	L_EQ  reduce 75
	INC  reduce 75
	DEC  reduce 75
	'='  reduce 75
	'>'  reduce 75
	'<'  reduce 75
	'+'  reduce 75
	'-'  reduce 75
	'*'  reduce 75
	'/'  reduce 75
	'%'  reduce 75
	'['  reduce 75
	']'  reduce 75
	'.'  reduce 75
	')'  reduce 75
	';'  reduce 75
	','  reduce 75


state 85
	statement : RETURN exp . ';'  (33)
	exp : exp . '+' exp  (54)
	exp : exp . '*' exp  (55)
	exp : exp . '/' exp  (56)
	exp : exp . '-' exp  (57)
	exp : exp . '%' exp  (58)
	exp : exp . EQ exp  (59)
	exp : exp . NOT_EQ exp  (60)
	exp : exp . '>' exp  (61)
	exp : exp . '<' exp  (62)
	exp : exp . L_EQ exp  (63)
	exp : exp . G_EQ exp  (64)
	exp : exp . AND exp  (65)
	exp : exp . OR exp  (66)
	exp : exp . '[' exp ']'  (68)
	exp : exp . '.' ID  (69)

	EQ  shift 96
	OR  shift 97
	AND  shift 98
	NOT_EQ  shift 99
	G_EQ  shift 100
	L_EQ  shift 101
	'>'  shift 105
	'<'  shift 106
	'+'  shift 107
	'-'  shift 108
	'*'  shift 109
	'/'  shift 110
	'%'  shift 111
	'['  shift 112
	'.'  shift 113
	';'  shift 116
	.  error


state 86
	statement : ID '(' . opt_list_exp ')' ';'  (39)
	exp : ID '(' . opt_list_exp ')'  (70)
	opt_list_exp : .  (51)

	INT_CONSTANT  shift 65
	REAL_CONSTANT  shift 66
	ID  shift 84
	CHAR_CONSTANT  shift 73
	'!'  shift 74
	'-'  shift 75
	'('  shift 76
	')'  reduce 51

	exp  goto 87
	list_exp  goto 117
	opt_list_exp  goto 118


state 87
	list_exp : exp .  (53)
	exp : exp . '+' exp  (54)
	exp : exp . '*' exp  (55)
	exp : exp . '/' exp  (56)
	exp : exp . '-' exp  (57)
	exp : exp . '%' exp  (58)
	exp : exp . EQ exp  (59)
	exp : exp . NOT_EQ exp  (60)
	exp : exp . '>' exp  (61)
	exp : exp . '<' exp  (62)
	exp : exp . L_EQ exp  (63)
	exp : exp . G_EQ exp  (64)
	exp : exp . AND exp  (65)
	exp : exp . OR exp  (66)
	exp : exp . '[' exp ']'  (68)
	exp : exp . '.' ID  (69)

	EQ  shift 96
	OR  shift 97
	AND  shift 98
	NOT_EQ  shift 99
	G_EQ  shift 100
	L_EQ  shift 101
	'>'  shift 105
	'<'  shift 106
	'+'  shift 107
	'-'  shift 108
	'*'  shift 109
	'/'  shift 110
	'%'  shift 111
	'['  shift 112
	'.'  shift 113
	')'  reduce 53
	';'  reduce 53
	','  reduce 53


state 88
	statement : WRITE list_exp . ';'  (35)
	list_exp : list_exp . ',' exp  (52)

	';'  shift 119
	','  shift 120
	.  error


state 89
	if_else : IF '(' . exp ')' '{' statements '}' ELSE '{' statements '}'  (44)
	if_else : IF '(' . exp ')' '{' statements '}' ELSE statement  (45)
	if_else : IF '(' . exp ')' statement ELSE '{' statements '}'  (46)
	if_else : IF '(' . exp ')' statement ELSE statement  (47)
	if_else : IF '(' . exp ')' '{' statements '}'  (48)
	if_else : IF '(' . exp ')' statement  (49)

	INT_CONSTANT  shift 65
	REAL_CONSTANT  shift 66
	ID  shift 84
	CHAR_CONSTANT  shift 73
	'!'  shift 74
	'-'  shift 75
	'('  shift 76
	.  error

	exp  goto 121


state 90
	statement : READ list_exp . ';'  (34)
	list_exp : list_exp . ',' exp  (52)

	';'  shift 122
	','  shift 120
	.  error


state 91
	while : WHILE '(' . exp ')' '{' statements '}'  (42)
	while : WHILE '(' . exp ')' statement  (43)

	INT_CONSTANT  shift 65
	REAL_CONSTANT  shift 66
	ID  shift 84
	CHAR_CONSTANT  shift 73
	'!'  shift 74
	'-'  shift 75
	'('  shift 76
	.  error

	exp  goto 123


state 92
	exp : exp . '+' exp  (54)
	exp : exp . '*' exp  (55)
	exp : exp . '/' exp  (56)
	exp : exp . '-' exp  (57)
	exp : exp . '%' exp  (58)
	exp : exp . EQ exp  (59)
	exp : exp . NOT_EQ exp  (60)
	exp : exp . '>' exp  (61)
	exp : exp . '<' exp  (62)
	exp : exp . L_EQ exp  (63)
	exp : exp . G_EQ exp  (64)
	exp : exp . AND exp  (65)
	exp : exp . OR exp  (66)
	exp : exp . '[' exp ']'  (68)
	exp : exp . '.' ID  (69)
	exp : '!' exp .  (73)

	EQ  shift 96
	NOT_EQ  shift 99
	G_EQ  shift 100
	L_EQ  shift 101
	'>'  shift 105
	'<'  shift 106
	'+'  shift 107
	'-'  shift 108
	'*'  shift 109
	'/'  shift 110
	'%'  shift 111
	'['  shift 112
	'.'  shift 113
	OR  reduce 73
	AND  reduce 73
	INC  reduce 73
	DEC  reduce 73
	'='  reduce 73
	']'  reduce 73
	')'  reduce 73
	';'  reduce 73
	','  reduce 73


state 93
	exp : exp . '+' exp  (54)
	exp : exp . '*' exp  (55)
	exp : exp . '/' exp  (56)
	exp : exp . '-' exp  (57)
	exp : exp . '%' exp  (58)
	exp : exp . EQ exp  (59)
	exp : exp . NOT_EQ exp  (60)
	exp : exp . '>' exp  (61)
	exp : exp . '<' exp  (62)
	exp : exp . L_EQ exp  (63)
	exp : exp . G_EQ exp  (64)
	exp : exp . AND exp  (65)
	exp : exp . OR exp  (66)
	exp : exp . '[' exp ']'  (68)
	exp : exp . '.' ID  (69)
	exp : '-' exp .  (71)

	'['  shift 112
	'.'  shift 113
	EQ  reduce 71
	OR  reduce 71
	AND  reduce 71
	NOT_EQ  reduce 71
	G_EQ  reduce 71
	L_EQ  reduce 71
	INC  reduce 71
	DEC  reduce 71
	'='  reduce 71
	'>'  reduce 71
	'<'  reduce 71
	'+'  reduce 71
	'-'  reduce 71
	'*'  reduce 71
	'/'  reduce 71
	'%'  reduce 71
	']'  reduce 71
	')'  reduce 71
	';'  reduce 71
	','  reduce 71


state 94
	exp : '(' p_type . ')' exp  (67)

	')'  shift 124
	.  error

